@@ -5,6 +5,11 @@
   <configheader>Rules Storage</configheader>
   <configswitch name="driver" desc="What storage driver should we use?">sql
    <case name="prefs" desc="Preference System"/>
+   <case name="nosql" desc="NoSQL">
+    <configsection name="params">
+     <confignosql swicthname="driverconfig"/>
+    </configsection>
+   </case>
    <case name="sql" desc="SQL">
     <configsection name="params">
      <configsql switchname="driverconfig"/>
