@@ -42,6 +42,16 @@ Administration => Configuration and update anything that's highlighted as
 outdated.
 
 
+Upgrading Ingo From 3.x To 4.0
+==============================
+
+Configuration Options (conf.php)
+--------------------------------
+
+Added a NoSQL (MongoDB) driver for the storage backend.
+
+
+
 Upgrading Ingo From 3.1.x To 3.2
 ================================
 
